--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section class="lineup">
         <h3>Line Up</h3>
         <p class="dia">Viernes 21</p>
-        <div class="escenario-contenedor contenedor">
+        <div class="escenarios-contenedor contenedor">
             <div class="escenario rock bg-amarillo">
                 <p class="nombre-escenario">Escenario Rock</p>
                 <ul class="calendario">
@@ -112,7 +112,7 @@
         </div><!--.escenario-contenedor-->
         
         <p class="dia">Sabado 22</p>
-        <div class="escenario-contenedor contenedor">
+        <div class="escenarios-contenedor contenedor">
             <div class="escenario rock bg-verde">
                 <p class="nombre-escenario">Escenario Rock</p>
                 <ul class="calendario">
